DeveloperOrg/force-app/main/default/objects/Banker__c/Banker__c.object-meta.xml
<CustomObject>
    <label>Banker</label>
    <nameField>
        <label>Banker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>