DeveloperOrg/force-app/main/default/objects/Banker__c/fields/client__c.field-meta.xml
<CustomField>
    <fullName>client__c</fullName>
    <label>client</label>
    <referenceTo>client__c</referenceTo>
    <relationshipLabel>Banker</relationshipLabel>
    <relationshipName>Banker</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>