DeveloperOrg/force-app/main/default/objects/Banker__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>company</label>
    <referenceTo>company__c</referenceTo>
    <relationshipLabel>Banker</relationshipLabel>
    <relationshipName>Banker</relationshipName>
    <type>Lookup</type>
</CustomField>