DeveloperOrg/force-app/main/default/objects/Banker__c/fields/true__c.field-meta.xml
<CustomField>
    <fullName>true__c</fullName>
    <formula>AND(
 NOT( ISBLANK( Start_Date__c ) ),
 NOT( ISBLANK(  End_Date__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>true</label>
    <type>Checkbox</type>
</CustomField>