DeveloperOrg/force-app/main/default/objects/Banker__c/validationRules/after_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>after_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c    &lt;   TODAY()</errorConditionFormula>
    <errorMessage>Greater than today</errorMessage>
</ValidationRule>