DeveloperOrg/force-app/main/default/objects/Banker__c/validationRules/StartDate10.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate10</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;   Start_Date__c</errorConditionFormula>
    <errorMessage>date&gt; start date</errorMessage>
</ValidationRule>